# obsidian-android-view-app

./: .gitignore  Cargo.toml  LICENSE  README.md  app.go  go.mod  go.sum
server/: ws-server.py
src/: lib.rs  main.rs
