[package]
name = "obsidian-android-view-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
log = "0.4"
egui_demo_lib = "0.31"

[target.'cfg(not(target_os = "android"))'.dependencies.eframe]
version = "0.31"
default-features = true

[target.'cfg(target_os = "android")'.dependencies.android_logger]
version = "0.15"

[target.'cfg(target_os = "android")'.dependencies.eframe]
version = "0.31"
default-features = false
features = [
    "glow",
    "android-native-activity",
    "default_fonts",
]

# Used to get same winit used by eframe.
[target.'cfg(target_os = "android")'.dependencies.egui-winit]
version = "0.31"
default-features = false
features = [
    "clipboard",
    "links",
]